--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -114,11 +114,11 @@
             </div>
 
             <div class="buttons flex-display-center-sb">
-                <div class="list-btn btn-text flex-display-center-center">
+                <div class="list-btn animated-btn btn-text sans-regular flex-display-center-center">
                     Show list
                     <img src="../assets/arrow.svg" class="arrow"></img>
                 </div>
-                <div class="statistics-btn pointer btn-text">See statistics</div>
+                <div class="statistics-btn pointer btn-text sans-regular">See statistics</div>
             </div>
 
             <div class="where"> 
