--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="square on-screen"></div>
                             <div class="destination-title yellow-text">Venice - Italy</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -70,7 +70,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Boracay - Philippines</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">ASIA</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">ASIA</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -84,7 +84,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Dubrovnik - Croatia</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -98,7 +98,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Maya Bay - Thailand</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">ASIA</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">ASIA</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -112,7 +112,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Cinque Terre - Italy</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -126,7 +126,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Santorini - Greece</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -140,7 +140,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Machu Pichu - Peru</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">SOUTH AMERICA</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">SOUTH AMERICA</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -154,7 +154,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Mallorca - Spain</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -168,7 +168,7 @@
                             <div class="square"></div>
                             <div class="destination-title">Fjadrargljufur Canyon - Iceland</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">EUROPE</div>
+                        <div class="continent btn btn-text sans-regular flex-display-center-center">EUROPE</div>
                     </div>
 
                     <div class="reason">NATURAL</div>
@@ -181,7 +181,7 @@
                         <div class="square"></div>
                         <div class="destination-title">More locations to be added soon</div>
                     </div>
-                    <div class="continent btn btn-text flex-display-center-center">WORLD</div>
+                    <div class="continent btn btn-text sans-regular flex-display-center-center">WORLD</div>
                 </div>
 
                 <div class="reason">???</div>
