--- a/pages/map.html
+++ b/pages/map.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="buttons flex-display-center-sb">
-            <div class="list-btn btn-text flex-display-center-center">
+            <div class="list-btn animated-btn btn-text sans-regular flex-display-center-center">
                 Show list
                 <img src="../assets/arrow.svg" class="arrow"></img>
             </div>
