--- a/pages/map.html
+++ b/pages/map.html
@@ -16,14 +16,14 @@
     
         <div class="link-section">
             <div class="link link-1">
-                <a href="pages/map.html" class="nav-item">Map</a>
+                <a href="map.html" class="nav-item">Map</a>
             </div>
             <div class="link link-2">
-                <a href="pages/streams.html" class="nav-item2">Camera streams</a>
+                <a href="streams.html" class="nav-item2">Camera streams</a>
             </div>
         </div>
 
-        <a href="pages/simulator.html" class="nav-item3">Simulator</a>
+        <a href="simulator.html" class="nav-item3">Simulator</a>
     </div>
 
     <div class="map-container flex-display-center-center">
