--- a/pages/map.html
+++ b/pages/map.html
@@ -31,7 +31,7 @@
             <a href="../destinations/boracay.html">
                 <div class="city-card">
                 Boracay - Philippines <br> <br>
-                <span><div class="time">322 days</div> of waiting time </span> <br> 
+                <span><div class="time">443 days</div> of waiting time </span> <br> 
                 HISTORIC
                 </div>
             </a>
@@ -110,7 +110,7 @@
         </div>
 
         <div class="buttons flex-display-center-sb">
-            <div class="list-btn animated-btn btn-text sans-regular flex-display-center-center">
+            <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
                 Show list
                 <img src="../assets/arrow.svg" class="arrow"></img>
             </div>
