--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -25,9 +25,8 @@
     </div>
 
     <div class="content-wrapper">
-        <div class="video-wrapper">
-            <img src="http://195.31.128.34:80/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" frameborder="0"></img>
-            <!-- <video src="blob:https://www.earthcam.com/10e55968-b47c-43a4-8ede-66cbee44da68" muted="muted" crossorigin="anonymous" frameborder="0"></video> -->
+        <div class="video-wrapper flex-display-center-center">
+            <video class="player" src="../assets/videos/venice.mp4" alt="video" autoplay muted></video>
         </div>
         
         <div class="actual-content">
@@ -35,7 +34,7 @@
                 <a href="../destinations/boracay.html">
                     <div class="city-card">
                     Boracay - Philippines <br> <br>
-                    <span><div class="time">322 days</div> of waiting time </span> <br> 
+                    <span><div class="time">443 days</div> of waiting time </span> <br> 
                     HISTORIC
                     </div>
                 </a>
@@ -114,7 +113,7 @@
             </div>
 
             <div class="buttons flex-display-center-sb">
-                <div class="list-btn animated-btn btn-text sans-regular flex-display-center-center">
+                <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
                     Show list
                     <img src="../assets/arrow.svg" class="arrow"></img>
                 </div>
@@ -122,14 +121,14 @@
             </div>
 
             <div class="where"> 
-            <span> Venice- Italy </span> <br>
+            <span> Venice - Italy </span> <br>
                 RESIDENTS
             </div>
             
-            <div class="side-bar sb-right unfolded">
+            <div class="side-bar sb-right">
                 <div class="waiting-time-big sans-bold">
-                    322 days <span>of waiting time</span>
-                    <div class="next-spot sans-regular"> Next available spot on<span class="sans-bold"> April 3rd 2023</span></div>
+                    431 days <span> <br> of waiting time</span>
+                    <div class="next-spot sans-regular"> Next available spot on <span class="sans-bold data-holder"> </span></div>
                     <div class="comparison-data">
                         <div class="mono-bold">Enough time to:</div>
                         Get a C2 in English starting from 0 and still have 98 days spare
@@ -192,9 +191,15 @@
                 <div class="line"></div>
 
                 <div class="problem-wrapper">
-                    <div class="mono-bold">Problem:</div>
+                    <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                        Lipsum: t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
+                        Venice, known also as “The most serene” is slowly turning into the exact opposite and that’s because too 
+                        many people visiting the same place at the same time. Around 20 million visitors flood in each year; on its 
+                        busiest days, around 120,000 people visit this city which is home to just 55,000 permanent residents, making it 
+                        unbearable for them. Many of these tourists stick to the famous landmarks as the Rialto Bridge or St Mark’s Square, 
+                        further concentrating numbers into a tiny footprint. This damages Venice’s fragile buildings, strains its 
+                        infrastructure, inhibits local people from going about their business, and makes for a terrible visitor experience, 
+                        clearly impacting also tourists.
                     </div>
                 </div>
 
@@ -205,5 +210,13 @@
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="../script.js"></script>
+
+<script>
+    // DATE CALCULATOR FOR SINGLE DESTINATIONS
+    var options = { year: 'numeric', month: 'long', day: 'numeric' };
+    var myDate = new Date(new Date().getTime()+(431*24*60*60*1000));
+    var formatDate = myDate.toLocaleDateString("en-US", options);
+    $('.data-holder').html(formatDate)
+</script>
 </body>
 </html>
