--- a/destinations/canyon.html
+++ b/destinations/canyon.html
@@ -193,8 +193,10 @@
                 <div class="problem-wrapper">
                     <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                       
-
+                        The location has experienced an incredible spike in tourists after a music video made the cliff go viral, 
+                        that now is leaving deep scars on the vegetation. In fact, over 1 million people have visited the area 
+                        since the release of the music tape. The 20 percent annual uptick in visitors has been out of proportion 
+                        with infrastructure that is needed to protect Iceland’s volcanic landscape, where soil forms slowly and erodes quickly.
                     </div>
                 </div>
 
