--- a/destinations/machuP.html
+++ b/destinations/machuP.html
@@ -193,7 +193,12 @@
                 <div class="problem-wrapper">
                     <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                       
+                        The tourist flow has already strained available resources in Aguas Calientes, and the cloud 
+                        forest ecosystem is adversely impacted by the daily deluge of visitors. Some regulations that 
+                        have been applied, saved the site from being placed on UNESCO's list of World Heritage Sites 
+                        in Danger. Additionally, in 2019 the most delicate sites in the citadel were closed to visitors, 
+                        to safeguard the future of Machu Pichu from the impending dangers brought by visitors
+
 
                     </div>
                 </div>
