--- a/destinations/mallorca.html
+++ b/destinations/mallorca.html
@@ -193,7 +193,12 @@
                 <div class="problem-wrapper">
                     <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                       
+                        The Spanish Mediterranean island of Mallorca is particularly popular with German tourists, sometimes 
+                        even too popular, according to some of its residents. The constant increases are causing huge environmental 
+                        problems such as traffic jams and drinking water shortages. Moreover, the local population is in discomfort 
+                        because of the overcrowding and has protested against it on numerous occasions. The situation has gotten 
+                        so bad lately that locals have to carve their way around the terrace seating while holidaymakers sip their 
+                        drinks at the tables, basically invading the streets and passages of the city. 
 
                     </div>
                 </div>
