--- a/destinations/mayaB.html
+++ b/destinations/mayaB.html
@@ -193,7 +193,10 @@
                 <div class="problem-wrapper">
                     <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                       
+                        In 2018, realizing things had gotten out of hand, park authorities closed Maya Bay. The plan was four months of hardcore
+                         rehabilitation, but experts quickly realized the damage was so severe, it would take years to properly recover. Tourist 
+                         traffic had led to pollution from discarded trash and damaged coastal vegetation. But the main problem was the speedboats 
+                         ferrying hordes of daytrippers into the bay and dropping their anchors onto the coral below and destroying almost half of them. 
 
                     </div>
                 </div>
