--- a/destinations/santorini.html
+++ b/destinations/santorini.html
@@ -193,7 +193,12 @@
                 <div class="problem-wrapper">
                     <div class="mono-bold" style="margin-bottom: 10px;">Problem:</div>
                     <div class="sans-regular"> 
-                       
+                        A recent report on “overtourism” by the EU’s transport committee warned that the island is failing
+                         to manage the increasing numbers, spelling disaster for the local community and the environment, 
+                         and putting “the future of the destination at risk.” Since from April to October, the pretty paved 
+                         pathways decorating the cliff face at Oia, are packed with thousands of visitors whipping out their smartphones 
+                         to take the exact same picture. To make the situation even worse, the island is repeatedly plagued by traffic jams 
+                         in the summer months, housing prices have risen so much that employers are having to build new accommodation just for their staff.
 
                     </div>
                 </div>
